--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
+    "@langchain/community": "^0.3.37",
+    "@langchain/core": "^0.3.43",
+    "@langchain/langgraph": "^0.2.57",
+    "@langchain/openai": "^0.4.9",
     "@monaco-editor/react": "^4.7.0",
     "@next/swc-wasm-nodejs": "13.5.1",
     "@radix-ui/react-accordion": "^1.2.0",
@@ -39,9 +43,11 @@
     "@radix-ui/react-toggle": "^1.1.0",
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.2",
+    "@supabase/supabase-js": "^2.57.4",
     "@types/node": "20.6.2",
     "@types/react": "18.2.22",
     "@types/react-dom": "18.2.7",
+    "ai": "^3.1.12",
     "autoprefixer": "10.4.15",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -52,9 +58,11 @@
     "eslint-config-next": "13.5.1",
     "input-otp": "^1.2.4",
     "js-yaml": "^4.1.0",
+    "langchain": "^0.3.19",
     "lucide-react": "^0.446.0",
     "next": "13.5.1",
     "next-themes": "^0.3.0",
+    "pdf-parse": "^1.1.1",
     "pdfjs-dist": "^5.4.149",
     "postcss": "8.4.30",
     "react": "18.2.0",
@@ -68,6 +76,7 @@
     "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "5.2.2",
+    "use-stick-to-bottom": "^1.1.1",
     "vaul": "^0.9.9",
     "zod": "^3.23.8",
     "zustand": "^5.0.8"
